--- a/NativeSpark/src/main/resources/templates/cart-checkout.html
+++ b/NativeSpark/src/main/resources/templates/cart-checkout.html
@@ -16,15 +16,6 @@
             background-color: #f4f4f9;
         }
 
-        .footer-custom {
-            background-color: #014017;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            font-size: 1rem;
-            margin-top: auto;
-        }
-
         button span {
             transition: color 0.3s ease;
             font-size: 1.5rem;
@@ -99,9 +90,7 @@
     </div>
 </div>
 
-<footer class="footer-custom">
-    <p>&copy; 2025 NATIVESPARK INTEGRATION SOLUTIONS CORP. All Rights Reserved.</p>
-</footer>
+<div th:replace="~{footer}"></div>
 </body>
 </html>
 
