--- a/NativeSpark/src/main/resources/templates/cart.html
+++ b/NativeSpark/src/main/resources/templates/cart.html
@@ -36,7 +36,7 @@
 <!--Cart content-->
 <div class="container mt-5">
     <h2 class="text-center">Marketplace</h2>
-    <div th:if="${cartItems != null}">
+    <div th:if="${cartItems != null and !cartItems.isEmpty()}">
         <table class="table table-striped table-bordered">
             <thead class="table-dark">
             <tr>
